[gd_scene load_steps=13 format=3 uid="uid://dpemvr8ehylmu"]

[ext_resource type="Texture2D" uid="uid://dtnyr8o8bdnnv" path="res://Resources/Sprites/Artifact.png" id="1_c5tt6"]
[ext_resource type="Script" path="res://Scripts/Interaction/Hitbox.gd" id="1_ko3i2"]
[ext_resource type="Script" path="res://Scripts/Interaction/artifact.gd" id="2_1ta3g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uhvg5"]
atlas = ExtResource("1_c5tt6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fiv3b"]
atlas = ExtResource("1_c5tt6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmpa4"]
atlas = ExtResource("1_c5tt6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5x6f"]
atlas = ExtResource("1_c5tt6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6tnvx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhvg5")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_fiv3b")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_vmpa4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5x6f")
}],
"loop": false,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oxvkb"]
size = Vector2(26, 26)

[sub_resource type="Animation" id="Animation_48k4u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cajgn"]
resource_name = "new_animation"
length = 1.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b1cab"]
_data = {
"RESET": SubResource("Animation_48k4u"),
"new_animation": SubResource("Animation_cajgn")
}

[node name="Artifact" type="AnimatedSprite2D"]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_6tnvx")
frame = 3
frame_progress = 1.0
script = ExtResource("2_1ta3g")

[node name="Hitbox" type="Area2D" parent="."]
script = ExtResource("1_ko3i2")
value = 50
type = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_oxvkb")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b1cab")
}

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.55

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
